--- a/css/map_responsive.css
+++ b/css/map_responsive.css
@@ -35,13 +35,31 @@
         border: none;
       }
 
+/*#map{
+    height: 100%;
+    overflow: hidden;
+    padding-bottom: 22.25%;
+    padding-bottom: 0;
+    padding-top: 30px;
+    position: relative;
+    left: 10%;
+}*/
       #map {
-        bottom:0px;
+       /* bottom:0px;
         height: 100%;
         left: 342px;
         position: absolute;
-        right: 0px;
+        right: 0px;*/
+        /*min-width: 200px;*/
+       /* width: 50%;*/
+       height: 100%;
+        min-height: 300px;
+        
+        border: 1px solid grey;
       }
+/*.col.sm-8 {
+  height: 100%;
+}*/
 
       .options-box {
         background: #fff;
@@ -49,10 +67,11 @@
         border-radius: 3px;
         height: 100%;
         line-height: 35px;
-        padding: 10px 10px 30px 10px;
+        padding: 10px 10px 10px 10px;
         text-align: left;
-        width: 240px;
+       /* width: 240px;*/
       }
+
       #pano {
         width: 200px;
         height: 200px;
