--- a/css/map_responsive.css
+++ b/css/map_responsive.css
@@ -9,7 +9,7 @@
 
       .container {
         height: 100%;
-        position: relative;
+        /*position: relative;*/
       }
 
       input {
@@ -23,10 +23,7 @@
         text-align: center;
       }
 
-      #hide-listings,
-      #show-listings {
-        width: 48%;
-      }
+      
 
       hr {
         background: #D0D7D9;
@@ -64,9 +61,9 @@
       .options-box {
         background: #fff;
         border: 1px solid #999;
-        border-radius: 3px;
+        
         height: 100%;
-        line-height: 35px;
+        
         padding: 10px 10px 10px 10px;
         text-align: left;
        /* width: 240px;*/
@@ -81,18 +78,3 @@
         font-size: 12px;
       }
       
-
-
-#floating-panel {
-        position: absolute;
-        top: 10px;
-        left: 25%;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-        text-align: center;
-        font-family: 'Roboto','sans-serif';
-        line-height: 30px;
-        padding-left: 10px;
-      }
