--- a/css/map.css
+++ b/css/map.css
@@ -1,6 +1,5 @@
 
- html,
-      body {
+ html, body {
         font-family: Arial, sans-serif;
         height: 100%;
         margin: 0;
@@ -21,11 +20,6 @@
         font-size: 22px;
         margin: 0 0 10px 0;
         text-align: center;
-      }
-
-      #hide-listings,
-      #show-listings {
-        width: 48%;
       }
 
       hr {
@@ -54,8 +48,8 @@
         width: 240px;
       }
       #pano {
-        width: 200px;
-        height: 200px;
+        width: 150px;
+        height: 150px;
       }
 
       .text {
