--- a/css/map.css
+++ b/css/map.css
@@ -1,16 +1,20 @@
 
  html, body {
         font-family: Arial, sans-serif;
+        min-height: 100% !important;
         height: 100%;
         margin: 0;
         padding: 0;
+        line-height: 120%;
       }
 
       .container {
         height: 100%;
-        position: relative;
+        /*position: relative;*/
       }
-
+.row {
+  height: 100%;
+}
       input {
         font-size: 12px;
       }
@@ -22,6 +26,8 @@
         text-align: center;
       }
 
+      
+
       hr {
         background: #D0D7D9;
         height: 1px;
@@ -29,24 +35,38 @@
         border: none;
       }
 
+/*#map{
+    height: 100%;
+    overflow: hidden;
+    padding-bottom: 22.25%;
+    padding-bottom: 0;
+    padding-top: 30px;
+    position: relative;
+    left: 10%;
+}*/
       #map {
-        bottom:0px;
+       /* bottom:0px;
         height: 100%;
         left: 342px;
         position: absolute;
-        right: 0px;
+        right: 0px;*/
+        
+        height: 100%;
+        
       }
+
 
       .options-box {
         background: #fff;
         border: 1px solid #999;
-        border-radius: 3px;
+        
         height: 100%;
-        line-height: 35px;
-        padding: 10px 10px 30px 10px;
+        
+        padding: 10px 10px 10px 10px;
         text-align: left;
-        width: 240px;
+       /* width: 240px;*/
       }
+
       #pano {
         width: 150px;
         height: 150px;
@@ -56,18 +76,3 @@
         font-size: 12px;
       }
       
-
-
-#floating-panel {
-        position: absolute;
-        top: 10px;
-        left: 25%;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-        text-align: center;
-        font-family: 'Roboto','sans-serif';
-        line-height: 30px;
-        padding-left: 10px;
-      }
